# ecommerce-pipeline

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: base.yaml
dags/: backfill.py  daily_pipeline.py
dashboard/: metabase_setup.md
dbt/: dbt_project.yml  profiles.yml
dbt/models/mart/: customer_retention.sql  daily_revenue.sql  schema.yml  top_products.sql
dbt/models/staging/: schema.yml  stg_customers.sql  stg_orders.sql
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  data_dictionary.md
etl/extract/: postgres_extract.py
etl/load/: bigquery_load.py  s3_load.py
etl/transform/: clean.py  enrich.py
pipeline/: batch_pipeline.py
scripts/: run_pipeline.sh  seed_data.py  setup_source_db.sql
src/: config_loader.py  helpers.py  logger.py
tests/integration/: test_pipeline.py
tests/unit/: test_clean.py  test_enrich.py  test_helpers.py
